--- a/templates/properties/lightblue-metadata.json.erb
+++ b/templates/properties/lightblue-metadata.json.erb
@@ -22,11 +22,11 @@
     <% end -%>
     ],
 <% end -%>
-<% if metadata_roles != '' && metadata_roles.kind_of?(Array) -%>
+<% if metadata_roles != '' && metadata_roles.kind_of?(Hash) -%>
     "roleMap": {
     <% 
-      k = metadata_roles.length
-      metadata_roles.each do |role|
+      k = metadata_roles.keys.length
+      metadata_roles.keys.each do |role| 
     -%>
       <% if metadata_roles[role].kind_of?(Array) -%>
         "<%= role %>": [<% 
