--- a/templates/application/migrator/lightblue-migrator-daemon.sh.erb
+++ b/templates/application/migrator/lightblue-migrator-daemon.sh.erb
@@ -4,6 +4,8 @@
 # chkconfig: 345 99 05
 # description: Ensures that the legacy and new datasources are in sync.
 
+#This file is managed by Puppet, any changes will be overridden.
+
 # Setup variables
 JSVC_EXEC=<%= jsvc_exec %>
 <% if @java_home -%>
