--- a/templates/application/migrator/log4j.properties.erb
+++ b/templates/application/migrator/log4j.properties.erb
@@ -1,3 +1,5 @@
+#This file is managed by Puppet, any changes will be overridden.
+
 log4j.rootLogger=<%= @log_level %>,file
 
 # Direct log messages to a log file
