--- a/templates/client/lightblue-client.properties.erb
+++ b/templates/client/lightblue-client.properties.erb
@@ -1,3 +1,5 @@
+#This file is managed by Puppet, any changes will be overridden.
+
 metadataServiceURI=<%= @lbclient_metadata_uri %>
 dataServiceURI=<%= @lbclient_data_uri %>
 useCertAuth=<%= @lbclient_use_cert_auth %>
