--- a/templates/lightblue-security-domain-cert.conf.erb
+++ b/templates/lightblue-security-domain-cert.conf.erb
@@ -12,7 +12,7 @@
                   "password-stacking" => "useFirstPass",
                   "securityDomain" => "lightblue-cert",
                   "verifier" => "org.jboss.security.auth.certs.AnyCertVerifier",
-                  "rolesProperties" => "deleted",
+                  "rolesProperties" => expression "file://${jboss.server.config.dir}/roles.properties",
                   "authRoleName" => "authenticated",
                   "ldapServer" => "<%= ldap_ad_server %>",
                   "searchBase" => "<%= ldap_search_base %>",
