--- a/templates/application/migrator/lightblue-migrator-daemon.sh.erb
+++ b/templates/application/migrator/lightblue-migrator-daemon.sh.erb
@@ -59,7 +59,7 @@ do_exec()
     end
   end
 -%>
-    <%= jsvcCommand.sort.join " \\\n        " %>
+    <%= jsvcCommand.join " \\\n        " %>
 }
 
 do_start()
