Added way to set readPreferences for mongo metadata and data datasources

--- a/templates/properties/datasources.json.erb
+++ b/templates/properties/datasources.json.erb
@@ -50,8 +50,15 @@
           i = i - 1
         -%>
 <% end -%>
-     ]
+     ],
 <% end -%>
+     "driverOptions": {
+     <% if defined? @mongo_metadata_readPreference -%>
+        "readPreference": "<%=@mongo_metadata_readPreference%>"
+     <% else -%>
+        "readPreference": "primary"
+     <% end -%>
+     }
    },
    "mongodata" : {
      "type" : "com.redhat.lightblue.mongo.config.MongoConfiguration",
@@ -94,8 +101,15 @@
           i = i - 1
         -%>
 <% end -%>
-     ]
+     ],
 <% end -%>
+     "driverOptions": {
+     <% if defined? @mongo_data_readPreference -%>
+        "readPreference": "<%=@mongo_data_readPreference%>"
+     <% else -%>
+        "readPreference": "primary"
+     <% end -%>
+     }
    }
 
 <% if rdbms_servers_cfg.kind_of?(Array) -%>   
