--- a/templates/properties/lightblue-crud.json.erb
+++ b/templates/properties/lightblue-crud.json.erb
@@ -2,47 +2,41 @@
    "controllers" : [
       {
         "backend" : "mongo",
-        "controllerFactory" : "com.redhat.lightblue.mongo.config.MongoCRUDFactory"
-        <% unless @extensions.nil? -%>
-        ,
+        "controllerFactory" : "com.redhat.lightblue.mongo.config.MongoCRUDFactory",
         "extensions": {
-        	<% @extensions.each_with_index do |(extension, configs), extensions_index| -%>
-        	"<%= extension %>": [
-        		<% configs.each_with_index do |config, configs_index| -%>
-        		{
-        			<% config.each_with_index do |(key, value), config_index| -%>
-        			"<%= key %>": "<%= value %>"<%= ',' if config_index < (config.size - 1) %>
-        			<% end -%>
-        		}<%= ',' if configs_index < (configs.size - 1) %>
-        		<% end -%>
-        	]<%= ',' if extensions_index < (extensions.size - 1) %>
-        	<% end -%>
+	        <% unless @locking.nil? -%>
+	        "locking": [
+	        		<% locking.each_with_index do |locks, locks_index| -%>
+	        		{
+	        			<% locks.each_with_index do |(key, value), lock_index| -%>
+	        			"<%= key %>": "<%= value %>"<%= ',' if lock_index < (locks.size - 1) %>
+	        			<% end -%>
+	        		}<%= ',' if locks_index < (locking.size - 1) %>
+	        		<% end -%>
+	        	]
+	        <% end -%>
         }
-        <% end -%>
       }
       
       <% if additional_backend_controllers != '' && additional_backend_controllers.kind_of?(Array) -%>   
         <% additional_backend_controllers.each do |controller| -%>
         ,   
         {
-       "backend" : "<%=controller['backend']%>",
-       "controllerFactory" : "<%=controller['controllerFactory']%>"
-       <% if controller['extensions'] -%>
-        ,
-        "extensions": {
-        	<% extensions.each_with_index do |(extension, configs), extensions_index| -%>
-        	"<%= extension %>": [
-        		<% configs.each_with_index do |config, configs_index| -%>
-        		{
-        			<% config.each_with_index do |(key, value), config_index| -%>
-        			"<%= key %>": "<%= value %>"<%= ',' if config_index < (config.size - 1) %>
-        			<% end -%>
-        		}<%= ',' if configs_index < (configs.size - 1) %>
-        		<% end -%>
-        	]<%= ',' if extensions_index < (extensions.size - 1) %>
-        	<% end -%>
-        }
-        <% end -%>
+          "backend" : "<%=controller['backend']%>",
+          "controllerFactory" : "<%=controller['controllerFactory']%>",
+          "extensions": {
+	        <% unless @controller['locking'].nil? -%>
+	        "locking": [
+	        		<% locking.each_with_index do |locks, locks_index| -%>
+	        		{
+	        			<% locks.each_with_index do |(key, value), lock_index| -%>
+	        			"<%= key %>": "<%= value %>"<%= ',' if lock_index < (locks.size - 1) %>
+	        			<% end -%>
+	        		}<%= ',' if locks_index < (locking.size - 1) %>
+	        		<% end -%>
+	        	]
+	        <% end -%>
+          }
         }
         <% end -%>
       <% end -%>
