Fixed spec test for ldap datasource config, fixed bugs in erb found

--- a/templates/properties/datasources.json.erb
+++ b/templates/properties/datasources.json.erb
@@ -119,20 +119,20 @@
    ldap_config.each do |ldap|
    -%>
    "<%=ldap['datasourceName']%>": {
-      "type" : "com.redhat.lightblue.config.ldap.LdapDataSourceConfiguration",
-      "database" : "<%=ldap['database']%>",
-      "bindabledn" : "<%=ldap['bindabledn']%>%>",
-      "password" : "<%=ldap['password']%>",
-      "numberOfInitialConnections" : <%=ldap['numberOfInitialConnections']%>,
-      "maxNumberOfConnections" : <%=ldap['maxNumberOfConnections']%>,
-      "servers" : [
+      "type": "com.redhat.lightblue.config.ldap.LdapDataSourceConfiguration",
+      "database": "<%=ldap['database']%>",
+      "bindabledn": "<%=ldap['bindabledn']%>",
+      "password": "<%=ldap['password']%>",
+      "numberOfInitialConnections": <%=ldap['numberOfInitialConnections']%>,
+      "maxNumberOfConnections": <%=ldap['maxNumberOfConnections']%>,
+      "servers": [
          <%
          i = ldap['servers'].length
          ldap['servers'].each do |server|
          -%>
          {
-            "host" : "<%=server['host']%>",
-            "port" : "<%=server['port']%>"
+            "host": "<%=server['host']%>",
+            "port": "<%=server['port']%>"
          }
          <% if i > 1 then -%>
          ,
