--- a/templates/properties/lightblue-crud.json.erb
+++ b/templates/properties/lightblue-crud.json.erb
@@ -2,43 +2,17 @@
    "controllers" : [
       {
         "backend" : "mongo",
-        "controllerFactory" : "com.redhat.lightblue.mongo.config.MongoCRUDFactory",
-        "extensions": {
-	        <% unless @locking.nil? -%>
-	        "locking": [
-	        		<% locking.each_with_index do |locks, locks_index| -%>
-	        		{
-					<% locks.keys.sort.each_with_index do |key, lock_index| -%>
-					"<%= key %>": "<%= locks[key] %>"<%= ',' if lock_index < (locks.size - 1) %>
-	        			<% end -%>
-	        		}<%= ',' if locks_index < (locking.size - 1) %>
-	        		<% end -%>
-	        	]
-	        <% end -%>
-        }
+        "controllerFactory" : "com.redhat.lightblue.mongo.config.MongoCRUDFactory"
       }
       
       <% if additional_backend_controllers != '' && additional_backend_controllers.kind_of?(Array) -%>   
         <% additional_backend_controllers.each do |controller| -%>
         ,   
         {
-          "backend" : "<%=controller['backend']%>",
-          "controllerFactory" : "<%=controller['controllerFactory']%>",
-          "extensions": {
-	        <% unless @controller['locking'].nil? -%>
-	        "locking": [
-	        		<% locking.each_with_index do |locks, locks_index| -%>
-	        		{
-					<% locks.keys.sort.each_with_index do |key, lock_index| -%>
-					"<%= key %>": "<%= locks[key] %>"<%= ',' if lock_index < (locks.size - 1) %>
-	        			<% end -%>
-	        		}<%= ',' if locks_index < (locking.size - 1) %>
-	        		<% end -%>
-	        	]
-	        <% end -%>
-          }
+       "backend" : "<%=controller['backend']%>",
+       "controllerFactory" : "<%=controller['controllerFactory']%>"
         }
         <% end -%>
-      <% end -%>
+      <% end -%> 
    ]
 }
