Revert "Reverting CHG8485 because of cert issues"
This reverts commit 80d2d331cb33d16fe97b736aca53c9d0b8b7d3ef.

--- a/templates/properties/lightblue-crud.json.erb
+++ b/templates/properties/lightblue-crud.json.erb
@@ -2,17 +2,43 @@
    "controllers" : [
       {
         "backend" : "mongo",
-        "controllerFactory" : "com.redhat.lightblue.mongo.config.MongoCRUDFactory"
+        "controllerFactory" : "com.redhat.lightblue.mongo.config.MongoCRUDFactory",
+        "extensions": {
+	        <% unless @locking.nil? -%>
+	        "locking": [
+	        		<% locking.each_with_index do |locks, locks_index| -%>
+	        		{
+					<% locks.keys.sort.each_with_index do |key, lock_index| -%>
+					"<%= key %>": "<%= locks[key] %>"<%= ',' if lock_index < (locks.size - 1) %>
+	        			<% end -%>
+	        		}<%= ',' if locks_index < (locking.size - 1) %>
+	        		<% end -%>
+	        	]
+	        <% end -%>
+        }
       }
       
       <% if additional_backend_controllers != '' && additional_backend_controllers.kind_of?(Array) -%>   
         <% additional_backend_controllers.each do |controller| -%>
         ,   
         {
-       "backend" : "<%=controller['backend']%>",
-       "controllerFactory" : "<%=controller['controllerFactory']%>"
+          "backend" : "<%=controller['backend']%>",
+          "controllerFactory" : "<%=controller['controllerFactory']%>",
+          "extensions": {
+	        <% unless @controller['locking'].nil? -%>
+	        "locking": [
+	        		<% locking.each_with_index do |locks, locks_index| -%>
+	        		{
+					<% locks.keys.sort.each_with_index do |key, lock_index| -%>
+					"<%= key %>": "<%= locks[key] %>"<%= ',' if lock_index < (locks.size - 1) %>
+	        			<% end -%>
+	        		}<%= ',' if locks_index < (locking.size - 1) %>
+	        		<% end -%>
+	        	]
+	        <% end -%>
+          }
         }
         <% end -%>
-      <% end -%> 
+      <% end -%>
    ]
 }
