Added ability to set mongo writeConcern for metadata and data datasources

--- a/templates/properties/datasources.json.erb
+++ b/templates/properties/datasources.json.erb
@@ -19,6 +19,9 @@
      "noCertValidation" : <%=mongo_noCertValidation%>,
 <% end -%>
      "database" : "metadata",
+<% if defined? @mongo_metadata_writeConcern -%>
+     "writeConcern": "<%=@mongo_metadata_writeConcern%>",
+<% end %>
 <% if defined? @mongo_auth_mechanism -%>
      "credentials" : {
        "mechanism": "<%=@mongo_auth_mechanism%>", 
@@ -70,6 +73,9 @@
      "noCertValidation" : <%=mongo_noCertValidation%>,
 <% end -%>
      "database" : "data",
+<% if defined? @mongo_data_writeConcern -%>
+     "writeConcern": "<%=@mongo_data_writeConcern%>",
+<% end %>
 <% if defined? @mongo_auth_mechanism -%>
      "credentials" : {
        "mechanism": "<%=@mongo_auth_mechanism%>", 
