Add new logger to log slow queries

--- a/templates/logging.conf.erb
+++ b/templates/logging.conf.erb
@@ -22,7 +22,10 @@
    },
     "logger" => {
        "com.redhat" => {
-         "level" => "<%= lightblue_log_level %>",
+         "level" => "<%= lightblue_log_level %>"
+       },
+       "com.redhat.lightblue.crud.mongo.slowresults" => {
+         "level" => "<%= slow_query_log_level %>"
        }
    },
     "root-logger" => {
