--- a/templates/properties/datasources.json.erb
+++ b/templates/properties/datasources.json.erb
@@ -11,7 +11,7 @@
        "validations. It should be set to true only for development."
      ],
      "type" : "com.redhat.lightblue.mongo.config.MongoConfiguration",
-     "metadataDataStoreParser" : "com.redhat.lightblue.metadata.mongo.MongoDataStoreParser",
+     "metadataDataStoreParser" : "com.redhat.lightblue.mongo.metadata.MongoDataStoreParser",
 <% if mongo_ssl -%>
      "ssl" : <%=mongo_ssl%>,
 <% end -%>
@@ -65,7 +65,7 @@
    },
    "mongodata" : {
      "type" : "com.redhat.lightblue.mongo.config.MongoConfiguration",
-     "metadataDataStoreParser" : "com.redhat.lightblue.metadata.mongo.MongoDataStoreParser",
+     "metadataDataStoreParser" : "com.redhat.lightblue.mongo.metadata.MongoDataStoreParser",
 <% if mongo_ssl -%>
      "ssl" : <%=mongo_ssl%>,
 <% end -%>
