--- a/templates/properties/datasources.json.erb
+++ b/templates/properties/datasources.json.erb
@@ -67,6 +67,9 @@
      "type" : "com.redhat.lightblue.mongo.config.MongoConfiguration",
      "metadataDataStoreParser" : "com.redhat.lightblue.mongo.metadata.MongoDataStoreParser",
      "maxResultSetSize" : <%=mongo_maxResultSetSize%>,
+<% if mongo_connectionsPerHost -%>
+     "connectionsPerHost": <%=mongo_connectionsPerHost%>,
+<% end -%>
 <% if mongo_ssl -%>
      "ssl" : <%=mongo_ssl%>,
 <% end -%>
