--- a/templates/properties/datasources.json.erb
+++ b/templates/properties/datasources.json.erb
@@ -67,7 +67,7 @@
      "type" : "com.redhat.lightblue.mongo.config.MongoConfiguration",
      "metadataDataStoreParser" : "com.redhat.lightblue.mongo.metadata.MongoDataStoreParser",
      "maxResultSetSize" : <%=mongo_maxResultSetSize%>,
-<% if connectionsPerHost -%>
+<% if mongo_connectionsPerHost -%>
      "connectionsPerHost": <%=mongo_connectionsPerHost%>,
 <% end -%>
 <% if mongo_ssl -%>
