--- a/templates/properties/config.properties.erb
+++ b/templates/properties/config.properties.erb
@@ -1,7 +1,9 @@
 # set default isolation strategy for tests to SEMAPHORE else breakpoints in IDE
 # when debugging unit tests will timeout with default strategy (THREAD).
-hystrix.command.default.execution.isolation.strategy=THREAD
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=300000
+hystrix.command.default.execution.isolation.strategy=SEMAPHORE
+# hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=300000
+hystrix.command.default.execution.isolation.semaphore.maxConcurrentRequests=10000
+hystrix.command.default.fallback.enabled=false
 # disable the circuit breaker, we deal with the errors
 hystrix.command.default.circuitBreaker.enabled=false
 <% if hystrix_execution_timeout_enabled -%>
