--- a/templates/properties/config.properties.erb
+++ b/templates/properties/config.properties.erb
@@ -2,8 +2,8 @@
 # when debugging unit tests will timeout with default strategy (THREAD).
 hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 # hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=300000
-execution.isolation.semaphore.maxConcurrentRequests=10000
-fallback.enabled=false
+hystrix.command.default.execution.isolation.semaphore.maxConcurrentRequests=10000
+hystrix.command.default.fallback.enabled=false
 # disable the circuit breaker, we deal with the errors
 hystrix.command.default.circuitBreaker.enabled=false
 <% if hystrix_execution_timeout_enabled -%>
