Add environment parameter to cert auth security domain

--- a/templates/lightblue-security-domain-cert.conf.erb
+++ b/templates/lightblue-security-domain-cert.conf.erb
@@ -18,6 +18,7 @@
                   "searchBase" => "<%= ldap_search_base %>",
                   "bindDn" => "<%= ldap_username %>",
                   "bindPassword" => "<%= ldap_password %>"
+                  "environment" => "<%= environment %>"
                 }
               }
             }
@@ -40,5 +41,3 @@
     }
   }
 }
-
-  
