--- a/templates/lightblue-security-domain-cert.conf.erb
+++ b/templates/lightblue-security-domain-cert.conf.erb
@@ -17,7 +17,7 @@
                   "ldapServer" => "<%= ldap_ad_server %>",
                   "searchBase" => "<%= ldap_search_base %>",
                   "bindDn" => "<%= ldap_username %>",
-                  "bindPassword" => "<%= ldap_password %>"
+                  "bindPassword" => "<%= ldap_password %>",
                   "environment" => "<%= environment %>"
                 }
               }
