--- a/templates/client/lightblue-client.properties.erb
+++ b/templates/client/lightblue-client.properties.erb
@@ -4,7 +4,11 @@ metadataServiceURI=<%= @lbclient_metadata_uri %>
 dataServiceURI=<%= @lbclient_data_uri %>
 useCertAuth=<%= @lbclient_use_cert_auth %>
 <% if(@lbclient_use_cert_auth == true) -%>
+<% if(@lbclient_ca_certificates) -%>
 caFilePath=<% i = @lbclient_ca_certificates.length; @lbclient_ca_certificates.each do |key, hash|; -%><% hash.each do |key,value|; -%><%if (key == 'file') ; -%><% if(@lbclient_use_physical_file == true) ; %>file://<%end;%><%=value%><% end; %><% end; %><% if i > 1 then; -%>,<% end; %><% i = i - 1;-%><% end;%>
+<% else -%>
+caFilePath=<% if(@lbclient_use_physical_file == true) %>file://<%end%><%= @lbclient_ca_file_path %>
+<% end -%>
 certFilePath=<% if(@lbclient_use_physical_file == true) %>file://<%end%><%= @lbclient_cert_file_path %>
 certPassword=<%= @lbclient_cert_password %>
 certAlias=<%= @lbclient_cert_alias %>
