Add commas after new values

--- a/templates/lightblue-security-domain-cert.conf.erb
+++ b/templates/lightblue-security-domain-cert.conf.erb
@@ -18,9 +18,9 @@
                   "searchBase" => "<%= ldap_search_base %>",
                   "bindDn" => "<%= ldap_username %>",
                   "bindPassword" => "<%= ldap_password %>",
-                  "useSSL" => "<%= ldap_use_tls %>"
-                  "trustStore" => "<%= truststore_url %>"
-                  "trustStorePassword" => "<%= truststore_password %>"
+                  "useSSL" => "<%= ldap_use_tls %>",
+                  "trustStore" => "<%= truststore_url %>",
+                  "trustStorePassword" => "<%= truststore_password %>",
                   "environment" => "<%= environment %>"
                 }
               }
