Adding poolMaxConnectionAgeMS and documentation

--- a/templates/lightblue-security-domain-cert.conf.erb
+++ b/templates/lightblue-security-domain-cert.conf.erb
@@ -28,6 +28,7 @@
                   "keepAlive" => "<%= @keepAlive %>",
                   "connectionTimeoutMS" => "<%= @connectionTimeoutMS %>",
                   "responseTimeoutMS" => "<%= @responseTimeoutMS %>",
+                  "poolMaxConnectionAgeMS" => "<%= @poolMaxConnectionAgeMS %>",
                 }
               }
             }
