--- a/templates/lightblue-security-domain-cert.conf.erb
+++ b/templates/lightblue-security-domain-cert.conf.erb
@@ -25,10 +25,10 @@
                   "trustStorePassword" => "<%= truststore_password %>",
                   "environment" => "<%= environment %>",
                   "debug" => "<%= @debug %>",
-                  "keepAlive" => "<%= @keepAlive %>",
-                  "connectionTimeoutMS" => "<%= @connectionTimeoutMS %>",
-                  "responseTimeoutMS" => "<%= @responseTimeoutMS %>",
-                  "poolMaxConnectionAgeMS" => "<%= @poolMaxConnectionAgeMS %>",
+                  "keepAlive" => "<%= @keep_alive %>",
+                  "connectionTimeoutMS" => "<%= @connection_timeout_ms %>",
+                  "responseTimeoutMS" => "<%= @response_timeout_ms %>",
+                  "poolMaxConnectionAgeMS" => "<%= @pool_max_connection_age_ms %>",
                 }
               }
             }
