Make memoryIndexThreshold configurable

--- a/templates/properties/lightblue-crud.json.erb
+++ b/templates/properties/lightblue-crud.json.erb
@@ -1,4 +1,7 @@
 {
+<% if @memoryIndexThreshold && @memoryIndexThreshold != '' -%>
+   "memoryIndexThreshold": <%= @memoryIndexThreshold %>,
+<% end -%>
    "controllers" : [
       {
         "backend" : "mongo",
