Make memoryIndexThreshold configurable

--- a/templates/properties/lightblue-crud.json.erb
+++ b/templates/properties/lightblue-crud.json.erb
@@ -1,5 +1,8 @@
 {
    "bulkParallelExecutions":1,
+<% if @memoryIndexThreshold && @memoryIndexThreshold != '' -%>
+   "memoryIndexThreshold": <%= @memoryIndexThreshold %>,
+<% end -%>
    "controllers" : [
       {
         "backend" : "mongo",
