--- a/templates/properties/ldap-healthcheck-config.json.erb
+++ b/templates/properties/ldap-healthcheck-config.json.erb
@@ -6,8 +6,8 @@
 <% if ldap_port -%>
      "port" : <%=ldap_port%>,
 <% end -%>
-<% if defined? @ldap_serach_base -%>
-     "serach_base" : "<%=@ldap_serach_base%>",
+<% if defined? @ldap_search_base -%>
+     "search_base" : "<%=@ldap_search_base%>",
 <% end -%>
 <% if defined? @ldap_username -%>
      "username" : "<%=@ldap_username%>",
