Adding maxResultSetSizeB and warnResultSetSizeB properties

--- a/templates/properties/lightblue-crud.json.erb
+++ b/templates/properties/lightblue-crud.json.erb
@@ -3,6 +3,13 @@
 <% if @memoryIndexThreshold && @memoryIndexThreshold != '' -%>
    "memoryIndexThreshold": <%= @memoryIndexThreshold %>,
 <% end -%>
+<% if @maxResultSetSizeB && @maxResultSetSizeB != '' -%>
+   "maxResultSetSizeB": <%= @maxResultSetSizeB %>,
+<% end -%>
+<% if @warnResultSetSizeB && @warnResultSetSizeB != '' -%>
+   "warnResultSetSizeB": <%= @warnResultSetSizeB %>,
+<% end -%>
+
    "controllers" : [
       {
         "backend" : "mongo",
