Separate maxResultSetSize settings for reads and writes

--- a/templates/properties/lightblue-crud.json.erb
+++ b/templates/properties/lightblue-crud.json.erb
@@ -2,8 +2,11 @@
 <% if @memoryIndexThreshold && @memoryIndexThreshold != '' -%>
    "memoryIndexThreshold": <%= @memoryIndexThreshold %>,
 <% end -%>
-<% if @maxResultSetSizeB && @maxResultSetSizeB != '' -%>
-   "maxResultSetSizeB": <%= @maxResultSetSizeB %>,
+<% if @maxResultSetSizeForReadsB && @maxResultSetSizeForReadsB != '' -%>
+   "maxResultSetSizeForReadsB": <%= @maxResultSetSizeForReadsB %>,
+<% end -%>
+<% if @maxResultSetSizeForWritesB && @maxResultSetSizeForWritesB != '' -%>
+   "maxResultSetSizeForWritesB": <%= @maxResultSetSizeForWritesB %>,
 <% end -%>
 <% if @warnResultSetSizeB && @warnResultSetSizeB != '' -%>
    "warnResultSetSizeB": <%= @warnResultSetSizeB %>,
